menu (2.1.15) unstable; urgency=low

  *  The "unreleased" release 
  * Morten Brix Pedersen:
    - Fix wrong error message when install-menu couldn't open a menu-method.
    - outputencoding now defaults to LOCALE when no value is specified.

 -- Bill Allombert <ballombe@debian.org>  Thu, 27 May 2004 19:59:24 +0200

menu (2.1.14) unstable; urgency=low

  * The "multiligual" release
  * Update German menu-section translation. Thanks Sebastian Rittau.
  * Update Hungarian menu-section translation. Thanks Attila Szervá.
  * Update Italian menu-section translation. Thanks Stefano Canepa.
  * Morten Brix Pedersen:
     - Change a wrong error message from "Could not open directory" to "Could
     not create directory".
     - Added --version option to update-menus.
  * Rename 'repeat_lang' menu option to 'outputlanguage' to match
    'outputencoding'.
  * Document --version in update-menus.1 and update-menus.fr.1.
  * Add /etc/menu-methods/lang.h which define sections_translations() as
    the list of translations available in this package.
  * Do not install obsolete README.changes.
  * Fix term() definition in /etc/menu-methods/menu.h.

 -- Bill Allombert <ballombe@debian.org>  Thu, 27 May 2004 15:58:52 +0200

menu (2.1.13) unstable; urgency=low

  * The "sell your car" release
  * Apply patch from Carlos O'Donell for hppa support.
    Closes: #248773. Thanks Grant Grundler.
  * Move wm-menu-config manpage to section 8 and insist it is deprecated.
  * Fix cppesc() to work correctly under non C locales.
  * Fix su-to-root to not change $HOME. This make sure xlib can find
    the X session cookie. Thanks to isaac on IRC for testing the patch. 
    Closes: #246886. This adresses the last case of #150314.
  * Add Ukrainian menu sections translation by Eugeniy Meshcheryakov.
    Closes: #244067.
  * Add Russian menu sections and messages translation by Dan Korostelev.
    Closes: #245353.
  * Add Greek menu sections translation by Konstantinos Margaritis.
