@@ -4,6 +4,7 @@ menu (2.1.15) unstable; urgency=low
   * Morten Brix Pedersen:
     - Fix wrong error message when install-menu couldn't open a menu-method.
     - outputencoding now defaults to LOCALE when no value is specified.
+    - No longer require startmenu and endmenu to be defined.
 
  -- Bill Allombert <ballombe@debian.org>  Thu, 27 May 2004 19:59:24 +0200
 
